<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mobilecontrol.Activities.AddUpdReservaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/codigoAddUpdReserva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/codigor"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/agenciaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtViewAgencia" />

        <Spinner
            android:id="@+id/sp_agencias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/clienteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtViewCliente" />

        <Spinner
            android:id="@+id/sp_clientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/vehiculoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtViewVehiculo" />

        <Spinner
            android:id="@+id/sp_vehiculos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

        <EditText
            android:id="@+id/fechainicioTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />

        <EditText
            android:id="@+id/fechafinalTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addUpdReservaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@android:drawable/ic_menu_save"
            android:tint="@android:color/background_light"
            app:backgroundTint="@color/design_default_color_primary" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>